--- a/locales/en/Home page.json
+++ b/locales/en/Home page.json
@@ -20,11 +20,11 @@
   "FeatureFooter": "THE COMPETENCE IN THE RIGHT SIZE FOR YOUR PROJECT.",
   "FeaturesHighway": "ROAD",
   "FeaturesHighwayCard": "International Road Transport Tito Smart Modal Logistics. The expertise and security your operation needs.",
-  "FeaturesPlane": "FLIGHTS",
+  "FeaturesPlane": "AIR",
   "FeaturesPlaneCard": "Tito's International Air Transport combines the best time for your operation. ",
   "FeaturesTime": "TIME",
   "FeaturesTimeCard": "Reduction of idle load time This functionality allows for optimization of waiting time during loads, resulting in greater operational efficiency.",
-  "FeaturesVessel": "VESSEL",
+  "FeaturesVessel": "MARITIME",
   "FeaturesVesselCard": "Tito offers solutions in the maritime modal, whether on a one-off basis or integrations with multiple tools and other modals. ",
   "FeatureText": "WE OFFER FAST AND POWERFUL TRANSPORTATION SOLUTIONS",
   "GlobalViewAbout": "GlobalView provides customers and operators with real-time status data for their processes on the Map. The application provides an integrated overview of dispatch, logistics in the most diverse modes, including air, sea and road, including ETA, ETD, documents among other features.\"",
@@ -173,5 +173,19 @@
   "advisoryservice": "Provide comprehensive advisory and ensure our clients the correct use of the benefit, constantly demonstrating the cost-benefit ratio.",
   "whatweaimfor": "What do we aim for?",
   "whatweprioritize": "What do we prioritize?",
-  "workingaccordingtothestandards": "Work according to established standards, executing all stages of the process rigorously. Prioritizing the needs of each client, where we conduct a comprehensive study of feasibility and administration of Concession Acts, with procedures integrated into our routine."
+  "workingaccordingtothestandards": "Work according to established standards, executing all stages of the process rigorously. Prioritizing the needs of each client, where we conduct a comprehensive study of feasibility and administration of Concession Acts, with procedures integrated into our routine.",
+  "history": "In 1935, Mr. Tito Cademartori began his professional activities in his family's service office, succeeding his father, Mr. Alcides Cademartori. The company was born. Customs activities were carried out in the village of Barra do Quarai, representing national importers and exporters. Tito's history began at a time when expressions like logistics, free trade, outsourcing, and drawback didn't even exist. Tito gave each of them other meanings and functionalities, and to one especially, gave an incalculable importance: TRUST.",
+  "history1": "In the 1940s, leaders linked to Tito integrated the Mixed Commission Pro-Construction of the International Bridge between Paso de los Libres and Uruguaiana, demonstrating the entrepreneurial spirit of its members. With the inauguration of this bridge, bilateral trade between Brazil and Argentina intensified throughout the 1940s and 1950s. Tito feels proud to maintain in its current client portfolio importers and exporters who have been using its services since that time.",
+  "history2": "In the early 1960s, two important milestones occurred in bilateral trade: the signing of the first protocols of the ALALC (Latin American Free Trade Association), which reduced taxes and fostered commercial relations in the Southern Cone, as well as the reciprocal granting of accreditations to land road transporters, which provided a new transportation alternative, triggering the paving and modernization of highways. Once again, Tito played a role in this exchange, articulating operational agreements and enabling business.",
+  "history3": "By the 1970s, the company already had a solid presence in South America. With the consolidation of commercial flows and the intense movement of goods, border terminals were created as customs service centers. In the 1980s, Tito was one of the first three companies in Brazil to automate its internal processes by heavily investing in information technology.",
+  "CalculationofVolumetricWeight": "Calculation of Volumetric Weight",
+  "Unitsusedforcalculation": "Units used for calculation",
+  "Length": "Length",
+  "Width": "Width",
+  "Height": "Height",
+  "Calculate": "Calculate",
+  "VolumetricWeight": "Volumetric Weight",
+  "DateofQuotation": "Date of Quotation:",
+  "Valueforconversion": "Value for conversion",
+  "Result": "Result"
 }
